Cambiando el layout del SoundTable Activity para poder trabajar con 2 audios. Empezando a implementar el MediaPlayer.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,18 +9,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MusicApp">
-        <activity android:name=".soundtable.SoundTableActivity"></activity>
+        <activity android:name=".DragNDrop.DragNDrop"></activity>
+        <activity android:name=".soundtable.SoundTableActivity" />
         <activity
             android:name=".main.MainActivity"
-            android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.MusicApp.NoActionBar">
+            android:theme="@style/Theme.MusicApp.NoActionBar"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
